--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>My Website</title>
+    <h2>my first website</h2>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <style>
